# rust_learning

./: .gitignore  docker-compose.yml
rust/: .env  Cargo.toml  Dockerfile
rust/src/: lib.rs  models.rs  schema.rs
rust/src/models/: db_connect.rs  models.rs
