[package]
name = "myapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["mysql"] }
csv = "1.1.6"
walkdir = "2.3.2"
anyhow = "1.0.42"
thiserror = "1.0.26"
